top spot not spacing correctly

--- a/src/app/styles/buy.module.css
+++ b/src/app/styles/buy.module.css
@@ -711,16 +711,18 @@
     .sliver{
       padding: 0px;
       font-size: 10px;
+      font-size: 8px;
+      width: 100%;
+      justify-content: center;
+    }
+    .sliver a{
+      padding: 0px;
     }
     
     .woman {
       display: none;
     }
-    .sliver{
-      font-size: 8px;
-      width: 100%;
-      justify-content: center;
-    }
+   
     
     .eighty{
       height: fit-content;
